libs/pavex_cli/tests/ui_tests/missing_handler_dependency/expectations/stderr.txt
[31m[1mERROR[0m[39m: 
  × I cannot invoke your request handler, `app::stream_file`, because it
  │ needs an instance of `std::path::PathBuf` as input, but I cannot find a
  │ constructor for that type.
    ╭─[src/lib.rs:10:1]
 10 │     let mut bp = Blueprint::new();
 11 │     bp.route(GET, "/home", f!(crate::stream_file));
    ·                            ───────────┬──────────
    ·                                       ╰── The request handler was registered here
 12 │     bp
    ╰────
  help: Register a constructor for `std::path::PathBuf`

Error: 
  × 
   ╭─[src/lib.rs:4:1]
 4 │ 
 5 │ pub fn stream_file(_inner: PathBuf) -> pavex_runtime::response::Response {
   ·                            ───┬───
   ·                               ╰── I do not know how to construct an instance of this input parameter
 6 │     todo!()
   ╰────